--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -96,6 +96,10 @@ nav a{
     width: 585px;
 }
 /* main section styles */
+main{
+   max-width: 1140px;
+   margin: 0 auto; 
+}
 .about{
     padding: 130px;
     border-radius: 10px;
@@ -108,4 +112,14 @@ nav a{
     font-size: 18px;
     font-weight: 400;
     line-height: 30px;
+}
+.about-container{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info{
+    text-align: center;
+}
+.info-description{
+    font-weight: bolder;
 }
