--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -119,7 +119,31 @@ main{
 }
 .about-info{
     text-align: center;
+    font-size: 20px;
 }
 .info-description{
-    font-weight: bolder;
+    font-size: 20px;
+    color: #757575;
+}
+.section-des{
+    padding: 30px 150px;
+    text-align: center;
+    margin-bottom: 50px;
+}
+.skill-container{
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    padding: 30px;
+    background-color: #FFF;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+
+}}
+.skill-description{
+    color: #757575;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
 }
