--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -140,7 +140,7 @@ main{
     border-radius: 5px;
     box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 
-}}
+}
 .skill-description{
     color: #757575;
     font-size: 16px;
