--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -103,6 +103,9 @@ main{
    max-width: 1140px;
    margin: 0 auto; 
 }
+main section{
+    margin-top: 130px;
+}
 .about{
     padding: 130px;
     border-radius: 10px;
@@ -149,4 +152,43 @@ main{
     font-size: 16px;
     font-weight: 400;
     line-height: 28px;
+}
+.resume-cotainer{
+    display: flex;
+    gap: 60px;
+}
+.resume-cotainer hr{
+    margin-top: 40px 0px 0px 40px;
+    
+}
+.resume-column-title{
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
+}
+.resume-item-title{
+    color: #474747;
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+.resume-item-institute{
+color: #757575;
+font-size: 20px;
+font-weight: 600;
+margin-top: 0px;
+margin-bottom: 20px;
+}
+.resume-item-description{
+    color: #757575;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+}
+.section-title{
+    margin-bottom: 110px;
+}
+.download-cv{
+    text-align: center;
+    margin-top: 50px;
 }
