--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -157,6 +157,9 @@ main section{
     display: flex;
     gap: 60px;
 }
+#resume-title{
+    margin-bottom: 130px;
+}
 .resume-cotainer hr{
     margin-top: 40px 0px 0px 40px;
     
@@ -185,10 +188,44 @@ margin-bottom: 20px;
     font-weight: 400;
     line-height: 28px;
 }
-.section-title{
-    margin-bottom: 110px;
-}
+
 .download-cv{
     text-align: center;
     margin-top: 50px;
+}
+#Download{
+    margin-top: 50px;
+    margin-bottom: 130px;
+}
+footer{
+    display: flex;
+    max-width: 1400px;
+    max-height: 780px;
+    gap: 110px;
+    background: #FFF8F3;
+    margin: 0px auto;
+    padding: 130px 230px;
+}
+.footer-column{
+    width: 50%;
+}
+.footer-des{
+    width: 562px;
+    color: #474747;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px; 
+}
+.social-links a {
+    margin-right: 30px;
+}
+.contact input[type="text"],.contact input[type="email"],textarea{
+    display: block;
+    margin-bottom: 25px;
+    padding: 18px 35px;
+    color : #757575;
+    border-radius: 5px;
+    border: 0;
+    font-size: 16px;
+    width: 100%;
 }
